objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>A2Z_EventID__c</fullName>
        <externalId>true</externalId>
        <label>A2Z EventID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booth_Last_Date__c</fullName>
        <label>Booth Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrandShowSegment__c</fullName>
        <label>BrandShowSegment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ASD March Gift &amp; Toy</fullName>
                </value>
                <value>
                    <fullName>ASD March Jewelry</fullName>
                </value>
                <value>
                    <fullName>ASD March Style &amp; Beauty</fullName>
                </value>
                <value>
                    <fullName>ASD March Value &amp; Variety</fullName>
                </value>
                <value>
                    <fullName>ASD March SourceDirect</fullName>
                </value>
                <value>
                    <fullName>ASD August SourceDirect</fullName>
                </value>
                <value>
                    <fullName>ASD August Gift &amp; Toy</fullName>
                </value>
                <value>
                    <fullName>ASD August Jewelry</fullName>
                </value>
                <value>
                    <fullName>ASD August Style &amp; Beauty</fullName>
                </value>
                <value>
                    <fullName>ASD August Value &amp; Variety</fullName>
                </value>
                <value>
                    <fullName>Interbike</fullName>
                </value>
                <value>
                    <fullName>Interbike   Outdoor Demo</fullName>
                </value>
                <value>
                    <fullName>OR Winter Expo</fullName>
                </value>
                <value>
                    <fullName>OR Winter All Mountain Demo</fullName>
                </value>
                <value>
                    <fullName>OR Summer Outdoor Demo</fullName>
                </value>
                <value>
                    <fullName>OR Summer Expo</fullName>
                </value>
                <value>
                    <fullName>ISS  Long Beach</fullName>
                </value>
                <value>
                    <fullName>ISS  Atlantic City</fullName>
                </value>
                <value>
                    <fullName>ISS  Nashville</fullName>
                </value>
                <value>
                    <fullName>ISS  Orlando</fullName>
                </value>
                <value>
                    <fullName>ISS  Ft. Worth</fullName>
                </value>
                <value>
                    <fullName>Sports Licensing &amp; Tailgate Show</fullName>
                </value>
                <value>
                    <fullName>JA New York Winter</fullName>
                </value>
                <value>
                    <fullName>JA New York Spring</fullName>
                </value>
                <value>
                    <fullName>JA New York Summer</fullName>
                </value>
                <value>
                    <fullName>JA New York Fall</fullName>
                </value>
                <value>
                    <fullName>JA Special Delivery  NY</fullName>
                </value>
                <value>
                    <fullName>Couture  Europe</fullName>
                </value>
                <value>
                    <fullName>Couture</fullName>
                </value>
                <value>
                    <fullName>Couture  Press Preview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrandfromShowObject__c</fullName>
        <formula>Show__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrandfromShowObject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_AE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For AR reports (request by Irene)</description>
        <label>Default AE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <label>Event Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <label>Event ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name_Formula__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Year__c</fullName>
        <label>Event Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Show_Date__c</fullName>
        <description>Last Show Date (End Date)</description>
        <label>Last Show Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gift, Home, &amp; Gen Mchds</fullName>
                </value>
                <value>
                    <fullName>Sports &amp; Apparel</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Jewelry, Luxury &amp; Antiques</fullName>
                </value>
                <value>
                    <fullName>Photo</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Design/Healthcare</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextYear_Event_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Year Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Next Year Event</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Booth_Last_Date__c</fullName>
        <label>Non-Booth Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Start_Date__c</fullName>
        <description>Start Date</description>
        <label>Opportunity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Event_Code__c</fullName>
        <description>Event Code from Registration System (EventXL)</description>
        <externalId>true</externalId>
        <label>Registration Event Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentTextFormula__c</fullName>
        <formula>IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD March Jewelry")),"Gift &amp; Toy", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD March Jewelry")), "Jewelry", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD March Style &amp; Beauty")), "Style &amp; Beauty", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD March Value &amp; Variety")), "Value &amp; Variety", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD March SourceDirect")), "SourceDirect", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD August SourceDirect")), "SourceDirect", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD August Gift &amp; Toy")), "Gift &amp; Toy", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD August Jewelry")), "Jewelry", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD August Style &amp; Beauty")), "Style &amp; Beauty", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ASD August Value &amp; Variety")), "Value &amp; Variety", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Interbike")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Interbike Outdoor Demo")), "Outdoor Demo", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "OR Winter Expo")), "Expo", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "OR Summer Outdoor Demo")), "All Mountain Demo", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "OR Summer Expo")), "Expo", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ISS Long Beach")), "Long Beach", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ISS Atlantic City")), "Atlantic City", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ISS Nashville")), "Nashville", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ISS Orlando")), "Orlando", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "ISS Ft. Worth")), "Ft. Worth", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Sports Licensing &amp; Tailgate Show ")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "JA New York Winter")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "JA New York Spring")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "JA New York Summer")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "JA New York Fall")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "JA Special Delivery NY")), "NY", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Couture Europe")), "Europe", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Couture")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Couture Press Preview")), "Press Preview", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Wedding &amp; Portrait Photographers Intl ")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "PhotoPlus")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Design Americas")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "GlobalShop")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "HD Expo Summit")), "Summit", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "HD Expo")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "KBIS")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "HDC Expo")), "Expo", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "EFA")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Construction SuperConference")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Medtrade")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Medtrade Spring")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Pizza Expo")), "", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Marine South")), "South", 
IF(OR(ISPICKVAL(BrandShowSegment__c, "Marine Modern Day")), "Modern Day", 
IF(ISPICKVAL(BrandShowSegment__c, "Marine West"), "West", "")))))))))))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Code__c</fullName>
        <formula>Show__r.Show_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Date__c</fullName>
        <label>Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Booth_Revenue__c</fullName>
        <label>Target Booth Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Digital_Revenue__c</fullName>
        <label>Target Digital Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_List_Rental_Revenue__c</fullName>
        <label>Target List Rental Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_NSF__c</fullName>
        <label>Target NSF</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Other_Revenue__c</fullName>
        <label>Target Other Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Print_Revenue__c</fullName>
        <label>Target Print Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Sponsorship_Revenue__c</fullName>
        <label>Target Sponsorship Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Verified_Registrants__c</fullName>
        <label>Target Verified Registrants</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upcoming_Event_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Up Coming Event (Event)</relationshipLabel>
        <relationshipName>Upcoming_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Code__c</columns>
        <columns>Event_Year__c</columns>
        <columns>Non_Booth_Last_Date__c</columns>
        <columns>Opportunity_Start_Date__c</columns>
        <columns>Last_Show_Date__c</columns>
        <columns>Stage_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>